<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signin_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_in_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sign_in"
                android:textAppearance="?textAppearanceHeadline6"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signin_email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/sign_in_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signin_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signin_password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/signin_email_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signin_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sign_in"
                app:backgroundTint="?colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signin_password_text_input" />

            <TextView
                android:id="@+id/sign_up_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/sign_up_label"
                android:textAppearance="?textAppearanceCaption"
                app:layout_constraintEnd_toStartOf="@id/sign_up_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/sign_up"
                android:textAppearance="?textAppearanceCaption"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/sign_up_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sign_up_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sign_up_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_up_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sign_up"
                android:textAppearance="?textAppearanceHeadline6"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/sign_up_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/sign_up_email_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sign_up"
                app:backgroundTint="?colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_password_text_input" />

            <TextView
                android:id="@+id/signin_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/signin_text"
                android:textAppearance="?textAppearanceCaption"
                app:layout_constraintEnd_toStartOf="@id/signin_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

            <TextView
                android:id="@+id/signin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/sign_in_underline"
                android:textAppearance="?textAppearanceCaption"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/signin_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/signin_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>